--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -88,6 +88,10 @@ h3 {
   z-index: 999;
 }
 
+html body .splide__arrow, .splide__pagination__page {
+  opacity: 0.1 !important;
+}
+
 .leaderboard-background {
   background-image: url("static/bg.jpg");
   background-size: cover;
@@ -144,22 +148,36 @@ h3 {
   -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.9);
           box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.9);
 }
-.fixture-background .league-table ul {
+.fixture-background .knockoutType {
+  background-color: yellow;
+  color: black;
+  text-transform: uppercase;
+  text-align: center;
+}
+.fixture-background .knockoutType h3 {
+  color: black;
+  font-size: 3em;
+  text-align: center;
+  padding: 15px;
+  margin: 0;
+  line-height: 1;
+}
+.fixture-background .league-table ul, .fixture-background .league-table .league-row {
   padding: 0;
   margin: 0;
   background: white;
   color: black;
   width: 100%;
 }
-.fixture-background .league-table ul li {
+.fixture-background .league-table ul li, .fixture-background .league-table ul .league-item, .fixture-background .league-table ul .row-item, .fixture-background .league-table .league-row li, .fixture-background .league-table .league-row .league-item, .fixture-background .league-table .league-row .row-item {
   border-bottom: 1px solid #ccc;
 }
-.fixture-background .league-table ul li span {
+.fixture-background .league-table ul li span, .fixture-background .league-table ul .league-item span, .fixture-background .league-table ul .row-item span, .fixture-background .league-table .league-row li span, .fixture-background .league-table .league-row .league-item span, .fixture-background .league-table .league-row .row-item span {
   font-family: "Dharma Gothic E W01 Bold";
   text-transform: uppercase;
   font-size: 3em;
 }
-.fixture-background .league-table li,
+.fixture-background .league-table li, .fixture-background .league-table .league-item,
 .fixture-background .league-table-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -168,20 +186,20 @@ h3 {
       -ms-flex-align: center;
           align-items: center;
 }
-.fixture-background .league-table li span,
+.fixture-background .league-table li span, .fixture-background .league-table .league-item span,
 .fixture-background .league-table-header span {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
   padding: 3px 10px;
 }
-.fixture-background .league-table li span.team-position,
+.fixture-background .league-table li span.team-position, .fixture-background .league-table .league-item span.team-position,
 .fixture-background .league-table-header span.team-position {
   -webkit-box-flex: 0.35;
       -ms-flex: 0.35;
           flex: 0.35;
 }
-.fixture-background .league-table li span.team-name,
+.fixture-background .league-table li span.team-name, .fixture-background .league-table .league-item span.team-name,
 .fixture-background .league-table-header span.team-name {
   -webkit-box-flex: 5;
       -ms-flex: 5;
@@ -296,7 +314,7 @@ h3 {
      object-fit: cover;
   position: absolute;
   top: 0;
-  left: 0;
+  left: 0px;
   width: 100%;
   height: 100%;
   -o-object-position: center;
@@ -325,7 +343,7 @@ h3 {
           box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.54);
 }
 .kids-parties-background .name {
-  font-size: 6em !important;
+  font-size: 6.5em !important;
   top: 50%;
   left: 50%;
   width: 90%;
