--- a/src/renderer/styles/scss/pages/_index.scss
+++ b/src/renderer/styles/scss/pages/_index.scss
@@ -45,14 +45,29 @@
     box-shadow:0px 0px 20px rgba(0,0,0,0.9);
   }
 
+  .knockoutType{
+    background-color:yellow;
+    color:black;
+    text-transform:uppercase;
+    text-align:center;
+    h3{
+      color:black;
+      font-size:3em;
+      text-align:center;
+      padding:15px;
+      margin:0;
+      line-height:1;
+    }
+  }
 
-  .league-table ul {
+
+  .league-table ul, .league-table .league-row {
     padding: 0;
     margin: 0;
     background: white;
     color: black;
     width: 100%;
-    li {
+    li, .league-item, .row-item {
       border-bottom:1px solid #ccc;
       span {
         font-family: "Dharma Gothic E W01 Bold";
@@ -61,7 +76,7 @@
       }
     }
   }
-  .league-table li,
+  .league-table li, .league-table .league-item,
   .league-table-header {
     display: flex;
     align-items: center;
