--- a/src/renderer/styles/scss/pages/_kids-parties.scss
+++ b/src/renderer/styles/scss/pages/_kids-parties.scss
@@ -76,7 +76,7 @@ h3{
   object-fit:cover;
   position:absolute;
   top:0;
-  left:0;
+  left:0px;
   width:100%;
   height:100%;
   object-position: center;
@@ -102,12 +102,11 @@ padding-bottom:0;
   box-shadow:0px 0px 30px rgba(0,0,0,0.54);
 }
 .name{
-  font-size:6em!important;
+  font-size:6.5em!important;
   top:50%;
   left:50%;
   width: 90%;
   line-height:0.9;
-
   transform:translate(-50%,-8px);
 }
 }
