--- a/src/renderer/styles/scss/components/_splide.scss
+++ b/src/renderer/styles/scss/components/_splide.scss
@@ -3,7 +3,7 @@
   height:100vh;
   width:100vw;
 }
-.splide__slide img{
+.splide__slide > img{
   height:100vh;
   width:100vw;
   object-fit:cover;
