--- a/src/renderer/styles/scss/pages/_index.scss
+++ b/src/renderer/styles/scss/pages/_index.scss
@@ -42,41 +42,62 @@
     max-width: 90%;
     margin: 0 auto;
     width: 100%;
-    box-shadow:0px 0px 20px rgba(0,0,0,0.9);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.9);
   }
 
-  .knockoutType{
-    background-color:yellow;
-    color:black;
-    text-transform:uppercase;
-    text-align:center;
-    h3{
-      color:black;
-      font-size:3em;
-      text-align:center;
-      padding:15px;
-      margin:0;
-      line-height:1;
+  .knockoutType {
+    background-color: yellow;
+    color: black;
+    text-transform: uppercase;
+    text-align: center;
+    h3 {
+      color: black;
+      font-size: 3em;
+      text-align: center;
+      padding: 15px;
+      margin: 0;
+      line-height: 1;
     }
   }
 
-
-  .league-table ul, .league-table .league-row {
+  .league-table ul,
+  .league-table .league-row {
     padding: 0;
     margin: 0;
     background: white;
     color: black;
     width: 100%;
-    li, .league-item, .row-item {
-      border-bottom:1px solid #ccc;
+    li,
+    .league-item,
+    .row-item {
+      border-bottom: 1px solid #ccc;
       span {
         font-family: "Dharma Gothic E W01 Bold";
         text-transform: uppercase;
         font-size: 3em;
+        line-height:1.5;
       }
     }
   }
-  .league-table li, .league-table .league-item,
+  .result-row{
+    .team-a,.team-b{
+
+
+    }
+
+    .team-vs{
+      i{
+        font-size:3rem;
+        width:40px;
+        text-align:center;
+      }
+      span{
+        font-size:4rem;
+      }
+    }
+  }
+  .league-table li,
+  .league-table .league-item,
   .league-table-header {
     display: flex;
     align-items: center;
@@ -97,7 +118,7 @@
 
   .league-table-header {
     background: yellow;
-    border-bottom:1px solid #ccc;
+    border-bottom: 1px solid #ccc;
 
     span {
       font-family: "Dharma Gothic E W01 Bold";
@@ -110,7 +131,20 @@
     background: black;
     text-align: left;
     padding: 20px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    .league-logo {
+            img {
+        height:180px;
+        margin-right:40px;
+        margin-bottom:-10px;
+      }
+    }
 
+    .league-name {
+      color: white;
+    }
 
     h2 {
       padding: 0;
@@ -124,4 +158,31 @@
       margin-bottom: 0;
     }
   }
+}
+
+
+.welcome-tournament{
+  h1{
+    margin-bottom:0;
+    margin-top:-20px;
+    font-size:8rem;
+    padding-bottom:0;
+    font-family: Dharma Gothic M W01 ExBold It!important;
+    text-shadow:0px 0px 20px rgba(0,0,0,0.9);
+
+  }
+  h2{
+    font-size:15rem;
+    max-width:90%;
+    margin:0 auto;
+    line-height:0.8;
+    color:white;
+
+    margin-bottom:80px;
+    text-shadow:0px 0px 20px rgba(0,0,0,0.9);
+  }
+  img{
+    max-height:100px;
+  }
+
 }
