--- a/src/renderer/styles/scss/components/_splide.scss
+++ b/src/renderer/styles/scss/components/_splide.scss
@@ -2,18 +2,17 @@
 .splide__slide{
   height:100vh;
   width:100vw;
-}
-.splide__slide > img{
+> img{
   height:100vh;
   width:100vw;
   object-fit:cover;
 
-}
-
-.splide__slide video{
+video{
   object-fit:cover;
   height:100vh;
   width:100vw;
+}
+}
 }
 
 .splide__progress{
