--- a/src/renderer/styles/scss/pages/_index.scss
+++ b/src/renderer/styles/scss/pages/_index.scss
@@ -52,9 +52,9 @@
     text-align: center;
     h3 {
       color: black;
-      font-size: 3em;
+      font-size: 2rem;
       text-align: center;
-      padding: 15px;
+      padding: 5px 15px;
       margin: 0;
       line-height: 1;
     }
@@ -74,7 +74,7 @@
       span {
         font-family: "Dharma Gothic E W01 Bold";
         text-transform: uppercase;
-        font-size: 3em;
+        font-size: 3rem;
         line-height:1.5;
       }
     }
