--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -412,6 +412,23 @@ html body .splide__arrow, .splide__pagination__page {
           transform: translate(-50%, -8px);
 }
 
+.kids-parties-background-xmas {
+  background-image: url("static/kids-parties/TV_MerryXmas.png") !important;
+}
+.kids-parties-background-xmas .xmas-content {
+  margin-top: -10em;
+  position: relative;
+  left: 8em;
+}
+.kids-parties-background-xmas .xmas-content h3 {
+  font-family: "Dharma Gothic E W01 Bold" !important;
+  font-size: 6em !important;
+}
+.kids-parties-background-xmas .xmas-content img {
+  max-width: 280px;
+  margin-bottom: 20px;
+}
+
 @media only screen and (-webkit-min-device-pixel-ratio: 1.6666666666666667), only screen and (min-resolution: 160dpi) {
   html, body {
     font-size: 8px;
